fixing spacing first and second page

--- a/pages/Components/button/button.module.css
+++ b/pages/Components/button/button.module.css
@@ -1,6 +1,7 @@
 .button{
   transition: all 0.3  s ease;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+  width: 40rem;
 }
 
 .button:hover{
